Progress new build and run

--- a/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/1-first-project.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/2-intro-tour/1-first-project.mdx
@@ -119,6 +119,7 @@ At this stage you have the code for the program you want to create. In order to 
     </Tabs>
 
 5.  In the Terminal type the following command:
+
     ```bash
     clang++ hello-world.cpp -l SplashKit -o my_program -Wall
     ```
@@ -137,4 +138,4 @@ At this stage you have the code for the program you want to create. In order to 
     ![Run the program you created](./images/run-program.png)
 </Steps>
 
-You have now build and run your first program.
+You have now built and run your first program.
