Shorten the project names in the example pages

--- a/src/content/docs/book/part-2-organised-code/2-organising-code/1-tour/01-03-design-perform-guess.mdx
+++ b/src/content/docs/book/part-2-organised-code/2-organising-code/1-tour/01-03-design-perform-guess.mdx
@@ -185,7 +185,7 @@ int main()
 :::tip
 Remember you can use the `ctrl-c` key combination to generate a signal to kill the program if you get stuck in an infinite loop!
 :::
-    <CodeActivity header="Try it out!" projectName="Field Guide/Sequence and Data/Simple Calculator/Read name" resources="/resources/code-activities/utilities.zip">
+    <CodeActivity header="Try it out!" projectName="Organised Code/Structuring Code/Guess That Number/Perform Guess" resources="/resources/code-activities/utilities.zip">
     ```c++ {"userCode":7-14}
     #include "splashkit.h"
     // access to read_integer, read_string, etc...
