Reduce flicker on SKO load in online-ide page + fix positioning

--- a/src/content/docs/book/appendix/online-ide.mdx
+++ b/src/content/docs/book/appendix/online-ide.mdx
@@ -8,11 +8,13 @@ import { SplashKitOnlineURL } from '/src/components/SplashKitOnlineConstants'
 <style>{`
   #sko-embed {
     position: absolute;
-    bottom: 0;
     left: 0;
     width: 100%;
+    top: var(--sl-nav-height);
     height: calc(100vh - var(--sl-nav-height));
 
+    color-scheme: auto;
+    background-color: #1f1f1f;
     border: none;
   }
 `}</style>
