--- a/src/content/docs/book/part-1-instructions/2-communicating-syntax/0-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/2-communicating-syntax/0-overview.mdx
@@ -7,7 +7,7 @@ import { YouTube } from 'astro-embed';
   <YouTube id="8KeyfyVdsD0" params="fs=1&modestbranding=1&rel=0"/>
 </div>
 
-This chapter takes a detour to explore the hidden path to understanding how programming languages are communicated. This will explore programming language **terminology**, and the tools that language designers use to capture and communicate the rules of their programming lagnuages. This will help you make the most of the following chapters as you learn how to use programming to build your own digital realities.
+This chapter takes a detour to explore the hidden path to understanding how programming languages are communicated. This will explore programming language **terminology**, and the tools that language designers use to capture and communicate the rules of their programming languages. This will help you make the most of the following chapters as you learn how to use programming to build your own digital realities.
 
 The path starts with a look at the concept of [grammar](/book/part-1-instructions/2-communicating-syntax/2-trailside/01-grammar). Programming language grammars describe the rules for building valid programs. One part of learning to program involves learning these rules, and how to use them to turn your ideas into code.
 
