Fix broken links

--- a/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/1-install.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/1-install.mdx
@@ -114,7 +114,7 @@ These guides have been created to simplify the process of troubleshooting any is
 <Card title="Troubleshooting" icon="fa:wrench">
 To get help with troubleshooting installation issues (or any other troubleshooting), you can read through the *General Troubleshooting* tips, or you may find the solution to your problem in the *Specific Issues* guides.
 
-[](/book/appendix/0-installation/3-0-troubleshooting-install.mdx)
+[](/book/appendix/0-installation/3-0-troubleshooting-install)
 
 ### <span style="display:none;">General Troubleshooting</span>
 
