Fix remaining broken links and adjust some starting text

--- a/src/content/docs/book/part-0-getting-started/00-0-introduction.mdx
+++ b/src/content/docs/book/part-0-getting-started/00-0-introduction.mdx
@@ -26,7 +26,7 @@ By the end of this introduction you will be able to:
 
 This book focuses on helping you develop a strong mental model of programming. It takes a bottom-up approach to introducing tools and capabilities so that you can understand how different things build upon each other. Initially, you will explore how instructions in the computer work at the lower levels. This will help you understand what is happening as your programs run and how the different parts all work together. When you understand this, you'll be able to explain how your programs work and know how to get new things working in the future. If the lower levels are particularly interesting to you, have a look at books on computer systems. These often explore the lower-level aspects of how computers work, all the way down to logic gates and how these can be combined to build a computer. The book [From Nand to Tetris](https://www.nand2tetris.org) is a great example of this.
 
-We are currently in **Part 0**, which sets the background for the book. In this part, the introduction outlines the approach of the book, and the remaining chapters on [Digital Realities](/book/part-0-getting-started/1-digital-realities/0-overview), [Computer Use](/book/appendix/2-computer-use/0-overview), and [Building Programs](/book/part-0-getting-started/3-building-programs/0-overview) help you start working with the computer through command line instructions and low-level tools.
+We are currently in **Part 0**, which sets the background for the book. In this part, the introduction outlines the approach of the book, and the remaining chapter on [Building Programs](/book/part-0-getting-started/3-building-programs/0-overview) will help you start working with the tools you need to build and run your own programs.
 
 **Part 1** of the book focuses on *programs as instructions*. This part will help you understand how the most basic elements or abstractions work within a digital reality. Understanding how these elements work individually will help you see how they are combined to create programs. The programs you make in this section will be relatively small, enabling you to focus on the mechanics and effects of each individual instruction. Your learning from this part will give you a solid foundation upon which to start building larger programs.
 
@@ -69,9 +69,5 @@ The book starts with C# in Part 1, transitions to C/C++ at the start of Part 2, 
 While the guide uses these languages to demonstrate programming concepts, it will not explore either one in depth. It will not focus on or examine things that are not common elsewhere. This means that you will need further study and practice after finishing this book to say that you have *learnt* C# or C/C++ in detail. But the great thing is that after finishing this book you will have all of the skills and understanding you need to learn C#, C/C++, and many other languages using resources available online and through things like generative artificial intelligence.
 
 Most modern systems are built using multiple programming languages, because different languages are better at different things. There is no one best language, so our approach aims to show you the common features across languages and set you up to quickly pick up the language that best fits your needs. This is something we draw upon in Part 4, where we will use different programming languages to build a variety of real-world programs.
-
-## Overview of Part 0
-
-Part 0 consists of three chapters: [Chapter 1](/book/part-0-getting-started/1-digital-realities/0-overview) will begin your journey by looking at what programs are and how to start thinking about them. [Chapter 2](/book/appendix/2-computer-use/0-overview) will help you acquire the first tools for your toolbelt as you set up your Raspberry Pi or computer and learn how to interact with the command line. [Chapter 3](/book/part-0-getting-started/3-building-programs/0-overview) will wrap up Part 0 by getting you started building your first program.
 
 Now that we have this part of the journey mapped out, let's get going.
