--- a/src/content/docs/book/part-1-instructions/00-part-1-programs-as-instructions.mdx
+++ b/src/content/docs/book/part-1-instructions/00-part-1-programs-as-instructions.mdx
@@ -8,7 +8,7 @@ import { YouTube } from 'astro-embed';
 </div>
 
 Part 0 has helped us set the stage for the first leg of our journey, in which we will explore **programs as instructions**.
-As we saw in [Digital Realities](/book/part-0-getting-started/1-digital-realities/0-overview), programming is about building abstractions.
+Programming is about building abstractions.
 There are different ways or styles of thinking about abstractions, called **programming paradigms**.
 
 In this guide we will start by focusing on **imperative** programming, in which we view programs as a **sequence of instructions** that tell the computer what to do. Part 1 focuses directly on this perspective. You will learn how each instruction works, when to use them, and how to combine them to create small programs.
