Fix compilation command typo, HelloWorld.cpp -> hello-world.cpp

--- a/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/3-first-project.mdx
+++ b/src/content/docs/book/part-0-getting-started/1-building-programs/3-guided-tour/3-first-project.mdx
@@ -124,7 +124,7 @@ At this stage you have the code for the program you want to create. In order to 
     <TabItem label="Linux">
 
     ```zsh
-    clang++ HelloWorld.cpp -o hello -l SplashKit -Wall
+    clang++ hello-world.cpp -o hello -l SplashKit -Wall
     ./hello
     ```
 
@@ -132,7 +132,7 @@ At this stage you have the code for the program you want to create. In order to 
     <TabItem label="macOS">
 
     ```zsh
-    clang++ HelloWorld.cpp -o hello -l SplashKit -Wall
+    clang++ hello-world.cpp -o hello -l SplashKit -Wall
     ./hello
     ```
 
@@ -140,7 +140,7 @@ At this stage you have the code for the program you want to create. In order to 
     <TabItem label="Windows (MSYS2)">
 
     ```zsh
-    clang++ HelloWorld.cpp -o hello -l SplashKit -Wall
+    clang++ hello-world.cpp -o hello -l SplashKit -Wall
     ./hello.exe
     ```
 
@@ -148,7 +148,7 @@ At this stage you have the code for the program you want to create. In order to 
     <TabItem label="Windows (WSL)">
 
     ```zsh
-    clang++ HelloWorld.cpp -o hello -l SplashKit -Wall
+    clang++ hello-world.cpp -o hello -l SplashKit -Wall
     ./hello
     ```
 
